Minor fixed : remove console.log and fixed layout issue in QuestionAboutAuthor

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -84,7 +84,9 @@ input:focus {
 .question-list {
   display: flex;
 }
-
+.question-author {
+  display: block;
+}
 .summary {
   display: flex;
   flex-direction: column;
